Cambios Fecha Efectiva individual.